--- a/index.html
+++ b/index.html
@@ -1,91 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>2D FPS Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    canvas {
-      background: #222;
-      display: block;
-      margin: auto;
-      touch-action: none;
-    }
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       overflow: hidden;
-      font-family: sans-serif;
-      color: white;
-      text-align: center;
+      background: #111;
     }
-    #joystick {
-      position: absolute;
-      left: 20px;
-      bottom: 20px;
-      width: 100px;
-      height: 100px;
-      border: 2px solid white;
-      border-radius: 50%;
-      touch-action: none;
-      opacity: 0.3;
-    }
-    #stick {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      background: white;
-      border-radius: 50%;
-      top: 25px;
-      left: 25px;
+    canvas {
+      display: block;
+      margin: 0 auto;
+      background: #222;
       touch-action: none;
     }
   </style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
-
-  <!-- Virtual Joystick -->
-  <div id="joystick">
-    <div id="stick"></div>
-  </div>
-
+  <canvas id="game" width="800" height="600"></canvas>
   <script>
-    const canvas = document.getElementById("gameCanvas");
+    const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
 
-    const player = { x: 100, y: 100, size: 20, speed: 3, hp: 100, color: "lime" };
-    const enemy = { x: 700, y: 500, size: 20, speed: 2, hp: 100, color: "red", cooldown: 0 };
+    const player = { x: 100, y: 100, size: 20, speed: 3, hp: 100 };
+    const enemy = { x: 600, y: 400, size: 20, speed: 2, hp: 100, cooldown: 0 };
     const bullets = [];
     const walls = [
-      { x: 200, y: 150, w: 100, h: 300 },
-      { x: 400, y: 100, w: 30, h: 400 },
-      { x: 600, y: 250, w: 100, h: 30 }
+      { x: 300, y: 200, w: 100, h: 20 },
+      { x: 500, y: 300, w: 20, h: 100 },
+      { x: 200, y: 400, w: 150, h: 20 }
     ];
 
     let keys = {};
+    let touchMove = { dx: 0, dy: 0 };
 
-    document.addEventListener("keydown", (e) => (keys[e.key] = true));
-    document.addEventListener("keyup", (e) => (keys[e.key] = false));
+    document.addEventListener("keydown", e => keys[e.key.toLowerCase()] = true);
+    document.addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
 
-    canvas.addEventListener("click", (e) => {
+    // Touch movement: drag to move
+    let touchStart = null;
+    canvas.addEventListener("touchstart", e => {
+      if (e.touches.length === 1) {
+        touchStart = { x: e.touches[0].clientX, y: e.touches[0].clientY };
+      }
+    });
+    canvas.addEventListener("touchmove", e => {
+      if (e.touches.length === 1 && touchStart) {
+        const dx = e.touches[0].clientX - touchStart.x;
+        const dy = e.touches[0].clientY - touchStart.y;
+        const mag = Math.hypot(dx, dy);
+        touchMove.dx = mag > 10 ? dx / mag : 0;
+        touchMove.dy = mag > 10 ? dy / mag : 0;
+      }
+    });
+    canvas.addEventListener("touchend", e => {
+      touchMove = { dx: 0, dy: 0 };
+      touchStart = null;
+    });
+
+    // Touch shooting: tap to shoot
+    canvas.addEventListener("touchstart", e => {
+      if (e.touches.length === 1 && enemy.hp > 0 && player.hp > 0) {
+        const angle = Math.atan2(enemy.y - player.y, enemy.x - player.x);
+        shoot(player, angle, "player");
+      }
+    });
+
+    canvas.addEventListener("click", e => {
       const angle = Math.atan2(e.offsetY - player.y, e.offsetX - player.x);
       shoot(player, angle, "player");
     });
 
-    function shoot(origin, angle, owner) {
+    function shoot(from, angle, owner) {
       bullets.push({
-        x: origin.x,
-        y: origin.y,
+        x: from.x,
+        y: from.y,
         dx: Math.cos(angle) * 6,
         dy: Math.sin(angle) * 6,
-        owner
+        owner: owner
       });
     }
 
     function move(obj, dx, dy) {
       obj.x += dx;
       obj.y += dy;
-      for (const wall of walls) {
+      for (let wall of walls) {
         if (
           obj.x > wall.x - obj.size &&
           obj.x < wall.x + wall.w + obj.size &&
@@ -98,47 +99,12 @@
       }
     }
 
-    function lineBlocked(x1, y1, x2, y2) {
-      for (const wall of walls) {
-        if (lineRectIntersect(x1, y1, x2, y2, wall)) return true;
-      }
-      return false;
-    }
-
-    function lineRectIntersect(x1, y1, x2, y2, rect) {
-      const { x, y, w, h } = rect;
-      return (
-        lineLine(x1, y1, x2, y2, x, y, x + w, y) ||
-        lineLine(x1, y1, x2, y2, x + w, y, x + w, y + h) ||
-        lineLine(x1, y1, x2, y2, x + w, y + h, x, y + h) ||
-        lineLine(x1, y1, x2, y2, x, y + h, x, y)
-      );
-    }
-
-    function lineLine(x1, y1, x2, y2, x3, y3, x4, y4) {
-      const uA =
-        ((x4 - x3) * (y1 - y3) - (y4 - y3) * (x1 - x3)) /
-        ((y4 - y3) * (x2 - x1) - (x4 - x3) * (y2 - y1));
-      const uB =
-        ((x2 - x1) * (y1 - y3) - (y2 - y1) * (x1 - x3)) /
-        ((y4 - y3) * (x2 - x1) - (x4 - x3) * (y2 - y1));
-      return uA >= 0 && uA <= 1 && uB >= 0 && uB <= 1;
-    }
-
     function update() {
-      let dx = (keys["d"] ? 1 : 0) - (keys["a"] ? 1 : 0);
-      let dy = (keys["s"] ? 1 : 0) - (keys["w"] ? 1 : 0);
-
-      // Touch joystick overrides keyboard
-      if (touchInput.dx !== 0 || touchInput.dy !== 0) {
-        dx = touchInput.dx;
-        dy = touchInput.dy;
-      }
-
+      // Move player (keyboard or touch)
+      let dx = (keys["d"] ? 1 : 0) - (keys["a"] ? 1 : 0) + touchMove.dx;
+      let dy = (keys["s"] ? 1 : 0) - (keys["w"] ? 1 : 0) + touchMove.dy;
       const mag = Math.hypot(dx, dy);
-      if (mag > 0) {
-        move(player, (dx / mag) * player.speed, (dy / mag) * player.speed);
-      }
+      if (mag > 0) move(player, (dx / mag) * player.speed, (dy / mag) * player.speed);
 
       // Enemy AI
       if (!lineBlocked(enemy.x, enemy.y, player.x, player.y)) {
@@ -154,16 +120,19 @@
 
       enemy.cooldown = Math.max(0, enemy.cooldown - 1);
 
+      // Update bullets
       for (let i = bullets.length - 1; i >= 0; i--) {
         const b = bullets[i];
         b.x += b.dx;
         b.y += b.dy;
 
+        // Hit wall
         if (walls.some(w => b.x > w.x && b.x < w.x + w.w && b.y > w.y && b.y < w.y + w.h)) {
           bullets.splice(i, 1);
           continue;
         }
 
+        // Hit enemy/player
         if (b.owner === "player" && Math.hypot(b.x - enemy.x, b.y - enemy.y) < enemy.size) {
           enemy.hp -= 15;
           bullets.splice(i, 1);
@@ -174,89 +143,76 @@
       }
     }
 
+    function lineBlocked(x1, y1, x2, y2) {
+      for (let wall of walls) {
+        if (lineRectIntersect(x1, y1, x2, y2, wall)) return true;
+      }
+      return false;
+    }
+
+    function lineRectIntersect(x1, y1, x2, y2, r) {
+      const { x, y, w, h } = r;
+      return (
+        lineLine(x1, y1, x2, y2, x, y, x + w, y) ||
+        lineLine(x1, y1, x2, y2, x + w, y, x + w, y + h) ||
+        lineLine(x1, y1, x2, y2, x + w, y + h, x, y + h) ||
+        lineLine(x1, y1, x2, y2, x, y + h, x, y)
+      );
+    }
+
+    function lineLine(x1, y1, x2, y2, x3, y3, x4, y4) {
+      const den = (x1 - x2) * (y3 - y4) - (y1 - y2) * (x3 - x4);
+      if (den === 0) return false;
+      const t = ((x1 - x3) * (y3 - y4) - (y1 - y3) * (x3 - x4)) / den;
+      const u = -((x1 - x2) * (y1 - x3) - (y1 - y2) * (x1 - x3)) / den;
+      return t >= 0 && t <= 1 && u >= 0 && u <= 1;
+    }
+
     function draw() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Walls
       ctx.fillStyle = "gray";
-      for (const wall of walls) {
+      for (let wall of walls) {
         ctx.fillRect(wall.x, wall.y, wall.w, wall.h);
       }
 
-      ctx.fillStyle = player.color;
+      // Player
+      ctx.fillStyle = "lime";
       ctx.beginPath();
       ctx.arc(player.x, player.y, player.size, 0, Math.PI * 2);
       ctx.fill();
 
-      ctx.fillStyle = enemy.color;
+      // Enemy
+      ctx.fillStyle = "red";
       ctx.beginPath();
       ctx.arc(enemy.x, enemy.y, enemy.size, 0, Math.PI * 2);
       ctx.fill();
 
+      // Bullets
       ctx.fillStyle = "white";
-      for (const b of bullets) {
+      for (let b of bullets) {
         ctx.beginPath();
         ctx.arc(b.x, b.y, 4, 0, Math.PI * 2);
         ctx.fill();
       }
 
+      // Text
       ctx.fillStyle = "white";
-      ctx.fillText(`Your HP: ${player.hp}`, 10, 20);
+      ctx.fillText(`Player HP: ${player.hp}`, 10, 20);
       ctx.fillText(`Enemy HP: ${enemy.hp}`, 680, 20);
 
-      if (player.hp <= 0) ctx.fillText("You died!", 370, 300);
-      if (enemy.hp <= 0) ctx.fillText("Enemy defeated!", 340, 300);
+      if (player.hp <= 0) ctx.fillText("YOU DIED", 370, 300);
+      if (enemy.hp <= 0) ctx.fillText("ENEMY DEFEATED", 340, 300);
     }
 
     function loop() {
-      if (player.hp > 0 && enemy.hp > 0) update();
+      update();
       draw();
       requestAnimationFrame(loop);
     }
 
     loop();
-
-    // --- Touch Controls ---
-    const joystick = document.getElementById("joystick");
-    const stick = document.getElementById("stick");
-    let touchInput = { dx: 0, dy: 0 };
-
-    let centerX = joystick.offsetLeft + 50;
-    let centerY = joystick.offsetTop + 50;
-
-    function handleJoystick(e) {
-      const touch = e.touches[0];
-      const x = touch.clientX - centerX;
-      const y = touch.clientY - centerY;
-
-      const dist = Math.min(40, Math.hypot(x, y));
-      const angle = Math.atan2(y, x);
-
-      const dx = Math.cos(angle) * dist;
-      const dy = Math.sin(angle) * dist;
-
-      stick.style.left = `${25 + dx}px`;
-      stick.style.top = `${25 + dy}px`;
-
-      touchInput.dx = dx / 40;
-      touchInput.dy = dy / 40;
-    }
-
-    function resetJoystick() {
-      stick.style.left = `25px`;
-      stick.style.top = `25px`;
-      touchInput.dx = 0;
-      touchInput.dy = 0;
-    }
-
-    joystick.addEventListener("touchstart", handleJoystick);
-    joystick.addEventListener("touchmove", handleJoystick);
-    joystick.addEventListener("touchend", resetJoystick);
-
-    // Touch shooting
-    canvas.addEventListener("touchstart", (e) => {
-      if (player.hp <= 0 || enemy.hp <= 0) return;
-      const angle = Math.atan2(enemy.y - player.y, enemy.x - player.x);
-      shoot(player, angle, "player");
-    });
   </script>
 </body>
 </html>
