--- a/index.html
+++ b/index.html
@@ -1,262 +1,224 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>2D FPS Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    canvas {
-      background: #222;
-      display: block;
-      margin: auto;
-      touch-action: none;
-    }
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       overflow: hidden;
-      font-family: sans-serif;
+      background: #111;
+    }
+    canvas {
+      display: block;
+      margin: 0 auto;
+      background: #222;
+      touch-action: none;
+    }
+    #menu, #endScreen {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: rgba(0,0,0,0.8);
       color: white;
-      text-align: center;
+      font-family: sans-serif;
+      font-size: 24px;
+      z-index: 10;
     }
-    #joystick {
+    button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 20px;
+    }
+    #touchControls {
       position: absolute;
-      left: 20px;
       bottom: 20px;
-      width: 100px;
-      height: 100px;
-      border: 2px solid white;
-      border-radius: 50%;
-      touch-action: none;
-      opacity: 0.3;
+      left: 20px;
+      right: 20px;
+      display: none;
+      justify-content: space-between;
     }
-    #stick {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      background: white;
+    .btn {
+      width: 80px;
+      height: 80px;
+      background: rgba(255,255,255,0.2);
+      color: white;
       border-radius: 50%;
-      top: 25px;
-      left: 25px;
-      touch-action: none;
+      text-align: center;
+      line-height: 80px;
+      font-size: 30px;
+      user-select: none;
     }
   </style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
-
-  <!-- Virtual Joystick -->
-  <div id="joystick">
-    <div id="stick"></div>
+  <div id="menu">
+    <h1>2D FPS Game</h1>
+    <button onclick="startGame('1v1')">1v1</button>
+    <button onclick="startGame('zombies')">Zombies</button>
   </div>
-
+  <div id="endScreen" style="display:none;"></div>
+  <canvas id="game" width="800" height="600"></canvas>
+  <div id="touchControls">
+    <div>
+      <div class="btn" ontouchstart="touchMove('left')" ontouchend="stopMove()">←</div>
+      <div class="btn" ontouchstart="touchMove('right')" ontouchend="stopMove()">→</div>
+    </div>
+    <div class="btn" ontouchstart="shooting=true" ontouchend="shooting=false">Shoot</div>
+  </div>
   <script>
-    const canvas = document.getElementById("gameCanvas");
+    const canvas = document.getElementById("game");
     const ctx = canvas.getContext("2d");
-
-    const player = { x: 100, y: 100, size: 20, speed: 3, hp: 100, color: "lime" };
-    const enemy = { x: 700, y: 500, size: 20, speed: 2, hp: 100, color: "red", cooldown: 0 };
-    const bullets = [];
-    const walls = [
-      { x: 200, y: 150, w: 100, h: 300 },
-      { x: 400, y: 100, w: 30, h: 400 },
-      { x: 600, y: 250, w: 100, h: 30 }
-    ];
+    let menu = document.getElementById("menu");
+    let endScreen = document.getElementById("endScreen");
+    let touchControls = document.getElementById("touchControls");
 
     let keys = {};
+    let shooting = false;
+    let gameMode = "";
+    let player, enemies, bullets, walls, gameOver, killCount, shootCooldown = 0;
 
-    document.addEventListener("keydown", (e) => (keys[e.key] = true));
-    document.addEventListener("keyup", (e) => (keys[e.key] = false));
+    document.addEventListener("keydown", e => keys[e.key] = true);
+    document.addEventListener("keyup", e => keys[e.key] = false);
+    canvas.addEventListener("touchstart", e => e.preventDefault(), { passive: false });
 
-    canvas.addEventListener("click", (e) => {
-      const angle = Math.atan2(e.offsetY - player.y, e.offsetX - player.x);
-      shoot(player, angle, "player");
-    });
-
-    function shoot(origin, angle, owner) {
-      bullets.push({
-        x: origin.x,
-        y: origin.y,
-        dx: Math.cos(angle) * 6,
-        dy: Math.sin(angle) * 6,
-        owner
-      });
+    function touchMove(dir) {
+      keys[dir === "left" ? "a" : "d"] = true;
+    }
+    function stopMove() {
+      keys["a"] = false;
+      keys["d"] = false;
     }
 
-    function move(obj, dx, dy) {
-      obj.x += dx;
-      obj.y += dy;
-      for (const wall of walls) {
-        if (
-          obj.x > wall.x - obj.size &&
-          obj.x < wall.x + wall.w + obj.size &&
-          obj.y > wall.y - obj.size &&
-          obj.y < wall.y + wall.h + obj.size
-        ) {
-          obj.x -= dx;
-          obj.y -= dy;
-        }
+    function startGame(mode) {
+      menu.style.display = "none";
+      touchControls.style.display = "flex";
+      gameMode = mode;
+      gameOver = false;
+      killCount = 0;
+      player = { x: 100, y: 300, w: 30, h: 30, hp: 100 };
+      bullets = [];
+      enemies = [];
+      walls = [{ x: 300, y: 200, w: 200, h: 30 }, { x: 100, y: 400, w: 600, h: 30 }];
+      if (mode === "1v1") {
+        enemies.push({ x: 600, y: 300, w: 30, h: 30, hp: 100, cooldown: 0 });
       }
+      requestAnimationFrame(update);
     }
 
-    function lineBlocked(x1, y1, x2, y2) {
-      for (const wall of walls) {
-        if (lineRectIntersect(x1, y1, x2, y2, wall)) return true;
-      }
-      return false;
-    }
-
-    function lineRectIntersect(x1, y1, x2, y2, rect) {
-      const { x, y, w, h } = rect;
-      return (
-        lineLine(x1, y1, x2, y2, x, y, x + w, y) ||
-        lineLine(x1, y1, x2, y2, x + w, y, x + w, y + h) ||
-        lineLine(x1, y1, x2, y2, x + w, y + h, x, y + h) ||
-        lineLine(x1, y1, x2, y2, x, y + h, x, y)
-      );
-    }
-
-    function lineLine(x1, y1, x2, y2, x3, y3, x4, y4) {
-      const uA =
-        ((x4 - x3) * (y1 - y3) - (y4 - y3) * (x1 - x3)) /
-        ((y4 - y3) * (x2 - x1) - (x4 - x3) * (y2 - y1));
-      const uB =
-        ((x2 - x1) * (y1 - y3) - (y2 - y1) * (x1 - x3)) /
-        ((y4 - y3) * (x2 - x1) - (x4 - x3) * (y2 - y1));
-      return uA >= 0 && uA <= 1 && uB >= 0 && uB <= 1;
+    function shoot(from, dir) {
+      bullets.push({ x: from.x + from.w / 2, y: from.y + from.h / 2, dir: dir, from });
     }
 
     function update() {
-      let dx = (keys["d"] ? 1 : 0) - (keys["a"] ? 1 : 0);
-      let dy = (keys["s"] ? 1 : 0) - (keys["w"] ? 1 : 0);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // Touch joystick overrides keyboard
-      if (touchInput.dx !== 0 || touchInput.dy !== 0) {
-        dx = touchInput.dx;
-        dy = touchInput.dy;
-      }
+      if (gameOver) return;
 
-      const mag = Math.hypot(dx, dy);
-      if (mag > 0) {
-        move(player, (dx / mag) * player.speed, (dy / mag) * player.speed);
+      // Player movement
+      if (keys["a"]) player.x -= 3;
+      if (keys["d"]) player.x += 3;
+      if ((keys[" "] || shooting) && shootCooldown <= 0) {
+        shoot(player, 1);
+        shootCooldown = 20;
       }
+      shootCooldown--;
 
       // Enemy AI
-      if (!lineBlocked(enemy.x, enemy.y, player.x, player.y)) {
-        if (enemy.cooldown <= 0) {
-          const angle = Math.atan2(player.y - enemy.y, player.x - enemy.x);
-          shoot(enemy, angle, "enemy");
-          enemy.cooldown = 60;
+      for (let e of enemies) {
+        if (e.hp <= 0) continue;
+        let dx = player.x - e.x;
+        e.x += dx > 0 ? 1 : -1;
+        if (e.cooldown <= 0 && !inWallSight(e, player)) {
+          shoot(e, -1);
+          e.cooldown = 60;
         }
-      } else {
-        const angle = Math.atan2(player.y - enemy.y, player.x - enemy.x);
-        move(enemy, Math.cos(angle) * enemy.speed, Math.sin(angle) * enemy.speed);
+        e.cooldown--;
       }
 
-      enemy.cooldown = Math.max(0, enemy.cooldown - 1);
-
-      for (let i = bullets.length - 1; i >= 0; i--) {
-        const b = bullets[i];
-        b.x += b.dx;
-        b.y += b.dy;
-
-        if (walls.some(w => b.x > w.x && b.x < w.x + w.w && b.y > w.y && b.y < w.y + w.h)) {
-          bullets.splice(i, 1);
-          continue;
+      // Bullet update
+      for (let b of bullets) {
+        b.x += b.dir * 5;
+        let targets = b.from === player ? enemies : [player];
+        for (let t of targets) {
+          if (t.hp > 0 && b.x > t.x && b.x < t.x + t.w && b.y > t.y && b.y < t.y + t.h) {
+            t.hp -= 15;
+            b.hit = true;
+            if (t.hp <= 0 && gameMode === "zombies" && b.from === player) killCount++;
+          }
         }
-
-        if (b.owner === "player" && Math.hypot(b.x - enemy.x, b.y - enemy.y) < enemy.size) {
-          enemy.hp -= 15;
-          bullets.splice(i, 1);
-        } else if (b.owner === "enemy" && Math.hypot(b.x - player.x, b.y - player.y) < player.size) {
-          player.hp -= 15;
-          bullets.splice(i, 1);
+        for (let w of walls) {
+          if (b.x > w.x && b.x < w.x + w.w && b.y > w.y && b.y < w.y + w.h) b.hit = true;
         }
       }
-    }
+      bullets = bullets.filter(b => !b.hit);
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      // Zombie spawn
+      if (gameMode === "zombies" && Math.random() < 0.02) {
+        enemies.push({
+          x: Math.random() < 0.5 ? 0 : canvas.width - 30,
+          y: 300 + Math.random() * 100 - 50,
+          w: 30, h: 30, hp: 100, cooldown: 0
+        });
+      }
+
+      // Draw walls
       ctx.fillStyle = "gray";
-      for (const wall of walls) {
-        ctx.fillRect(wall.x, wall.y, wall.w, wall.h);
+      for (let w of walls) ctx.fillRect(w.x, w.y, w.w, w.h);
+
+      // Draw player
+      if (player.hp > 0) {
+        ctx.fillStyle = "blue";
+        ctx.fillRect(player.x, player.y, player.w, player.h);
+        ctx.fillStyle = "white";
+        ctx.fillText("HP: " + player.hp, player.x, player.y - 10);
       }
 
-      ctx.fillStyle = player.color;
-      ctx.beginPath();
-      ctx.arc(player.x, player.y, player.size, 0, Math.PI * 2);
-      ctx.fill();
-
-      ctx.fillStyle = enemy.color;
-      ctx.beginPath();
-      ctx.arc(enemy.x, enemy.y, enemy.size, 0, Math.PI * 2);
-      ctx.fill();
-
-      ctx.fillStyle = "white";
-      for (const b of bullets) {
-        ctx.beginPath();
-        ctx.arc(b.x, b.y, 4, 0, Math.PI * 2);
-        ctx.fill();
+      // Draw enemies
+      ctx.fillStyle = "red";
+      for (let e of enemies) {
+        if (e.hp > 0) {
+          ctx.fillRect(e.x, e.y, e.w, e.h);
+          ctx.fillStyle = "white";
+          ctx.fillText("HP: " + e.hp, e.x, e.y - 10);
+          ctx.fillStyle = "red";
+        }
       }
 
-      ctx.fillStyle = "white";
-      ctx.fillText(`Your HP: ${player.hp}`, 10, 20);
-      ctx.fillText(`Enemy HP: ${enemy.hp}`, 680, 20);
+      // Draw bullets
+      ctx.fillStyle = "yellow";
+      for (let b of bullets) ctx.fillRect(b.x, b.y, 5, 2);
 
-      if (player.hp <= 0) ctx.fillText("You died!", 370, 300);
-      if (enemy.hp <= 0) ctx.fillText("Enemy defeated!", 340, 300);
+      if (player.hp <= 0) {
+        endScreen.innerHTML = `<h1>YOU DIED</h1>${gameMode === "zombies" ? `<p>Zombies defeated: ${killCount}</p>` : ""}`;
+        endScreen.style.display = "flex";
+        setTimeout(() => location.reload(), 4000);
+        gameOver = true;
+      }
+
+      if (gameMode === "1v1" && enemies.every(e => e.hp <= 0)) {
+        endScreen.innerHTML = "<h1>ENEMY DEFEATED</h1>";
+        endScreen.style.display = "flex";
+        setTimeout(() => location.reload(), 4000);
+        gameOver = true;
+      }
+
+      if (!gameOver) requestAnimationFrame(update);
     }
 
-    function loop() {
-      if (player.hp > 0 && enemy.hp > 0) update();
-      draw();
-      requestAnimationFrame(loop);
+    function inWallSight(a, b) {
+      for (let w of walls) {
+        let withinY = b.y + b.h > w.y && b.y < w.y + w.h;
+        let betweenX = (a.x < w.x && b.x > w.x) || (a.x > w.x + w.w && b.x < w.x + w.w);
+        if (withinY && betweenX) return true;
+      }
+      return false;
     }
-
-    loop();
-
-    // --- Touch Controls ---
-    const joystick = document.getElementById("joystick");
-    const stick = document.getElementById("stick");
-    let touchInput = { dx: 0, dy: 0 };
-
-    let centerX = joystick.offsetLeft + 50;
-    let centerY = joystick.offsetTop + 50;
-
-    function handleJoystick(e) {
-      const touch = e.touches[0];
-      const x = touch.clientX - centerX;
-      const y = touch.clientY - centerY;
-
-      const dist = Math.min(40, Math.hypot(x, y));
-      const angle = Math.atan2(y, x);
-
-      const dx = Math.cos(angle) * dist;
-      const dy = Math.sin(angle) * dist;
-
-      stick.style.left = `${25 + dx}px`;
-      stick.style.top = `${25 + dy}px`;
-
-      touchInput.dx = dx / 40;
-      touchInput.dy = dy / 40;
-    }
-
-    function resetJoystick() {
-      stick.style.left = `25px`;
-      stick.style.top = `25px`;
-      touchInput.dx = 0;
-      touchInput.dy = 0;
-    }
-
-    joystick.addEventListener("touchstart", handleJoystick);
-    joystick.addEventListener("touchmove", handleJoystick);
-    joystick.addEventListener("touchend", resetJoystick);
-
-    // Touch shooting
-    canvas.addEventListener("touchstart", (e) => {
-      if (player.hp <= 0 || enemy.hp <= 0) return;
-      const angle = Math.atan2(enemy.y - player.y, enemy.x - player.x);
-      shoot(player, angle, "player");
-    });
   </script>
 </body>
 </html>
