--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2D FPS Game</title>
+  <title>dead corners</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
