--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -120,9 +119,11 @@
 
       if (gameOver) return;
 
-      // Player movement
-      if (keys["a"]) player.x -= 3;
-      if (keys["d"]) player.x += 3;
+// Player movement
+if (keys["a"]) player.x -= 3;
+if (keys["d"]) player.x += 3;
+if (keys["w"]) player.y -= 3;
+if (keys["s"]) player.y += 3;
       if ((keys[" "] || shooting) && shootCooldown <= 0) {
         shoot(player, 1);
         shootCooldown = 20;
@@ -159,7 +160,7 @@
       bullets = bullets.filter(b => !b.hit);
 
       // Zombie spawn
-      if (gameMode === "zombies" && Math.random() < 0.02) {
+      if (gameMode === "zombies" && Math.random() < 0.008) {
         enemies.push({
           x: Math.random() < 0.5 ? 0 : canvas.width - 30,
           y: 300 + Math.random() * 100 - 50,
