--- a/index.html
+++ b/index.html
@@ -63,10 +63,21 @@
   </div>
   <div id="endScreen" style="display:none;"></div>
   <canvas id="game" width="800" height="600"></canvas>
-<div id="touchControls">
-  <div style="display: flex; flex-direction: column; gap: 5px;">
-    <button id="up">⬆️</button>
-    <div style="display: flex; gap: 5px;">
+<div id="touchControls" style="position: absolute; bottom: 20px; left: 20px; right: 20px; display: flex; justify-content: space-between;">
+  <div>
+    <div style="text-align: center;">
+      <button id="up" style="width: 60px; height: 60px;">⬆️</button>
+    </div>
+    <div>
+      <button id="left" style="width: 60px; height: 60px;">⬅️</button>
+      <button id="down" style="width: 60px; height: 60px;">⬇️</button>
+      <button id="right" style="width: 60px; height: 60px;">➡️</button>
+    </div>
+  </div>
+  <div>
+    <button id="shoot" style="width: 80px; height: 80px;">🔫</button>
+  </div>
+</div>
       <button id="left">⬅️</button>
       <button id="down">⬇️</button>
       <button id="right">➡️</button>
