--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>dead corners</title>
+  <title>deadzone</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div id="menu">
-    <h1>2D FPS Game</h1>
+    <h1>deadzone</h1>
     <button onclick="startGame('1v1')">1v1</button>
     <button onclick="startGame('zombies')">Zombies</button>
   </div>
